ingress/ingress_dashboard.yaml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    name: kubernetes-dashboard-ingress
    namespace: kubernetes-dashboard
  spec:
    rules:
    - host: dashboard.kuber-soft.loc
      http:
        paths:
        - path: /
          backend:
             serviceName: kubernetes-dashboard
             servicePort: 443
    tls:
    - hosts:
      - dashboard.kuber-soft.loc
      secretName: selfsigned-cert-tls
